<resources>
    <string name="app_name">SignIn</string>
    <string name="tvRegister">Register</string>
    <string name="your_logo">Your Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account? Sign up here</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="choose_course">Choose course</string>
    <string name="java">Java</string>
    <string name="android">Android</string>
    <string name="animation">Animation</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel_registration">Cancel Registration</string>
</resources>
