<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/tvRegister"
        style="@style/LayoutDimen"
        android:background="@color/headerColor"
        android:padding="45dp"
        android:text="Registration"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
        using text input layout to create floating label edit text
    -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layoutMargin"
        android:layout_marginTop="@dimen/layoutMargin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First name"
            android:textSize="@dimen/textSize"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layoutMargin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last name"
            android:textSize="@dimen/textSize"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layoutMargin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:textSize="@dimen/textSize"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <!--<Spinner-->
        <!--android:id="@+id/spinner_country"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:prompt="Country"-->
        <!--style="@style/layoutMargin"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:spinnerMode="dropdown">-->
    <!--</Spinner>-->


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layoutMargin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:textSize="@dimen/textSize"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        style="@style/layoutMargin"
        app:counterMaxLength="20"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textSize="@dimen/textSize"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        style="@style/layoutMargin"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textSize="@dimen/textSize"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/layoutMargin"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textSize="@dimen/textSize"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!--
        Radio button for gender
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        style="@style/layoutMargin"
        android:layout_marginTop="8dp"/>
    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layoutMargin"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:buttonTint="@color/signUpColor"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:checked="true"
            android:buttonTint="@color/signUpColor"/>

    </RadioGroup>
    <!--
        Button to submit the form
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose course"
        style="@style/layoutMargin"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <CheckBox
        android:id="@+id/java_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Java"
        style="@style/layoutMargin"
        />

    <CheckBox
        android:id="@+id/android_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Android"
        style="@style/layoutMargin"/>

    <CheckBox
        android:id="@+id/animation_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Animation"
        style="@style/layoutMargin"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:padding="2dp"
        android:background="@color/signUpColor"
        android:text="Sign Up"
        style="@style/layoutMargin"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnCancelRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        style="@style/layoutMargin"
        android:text="Cancel Registration"
        android:layout_marginBottom="5dp"
        android:background="@color/cancelRegColor"
        android:textSize="15sp" />
</LinearLayout>
</ScrollView>